syntax = "proto3";
package Oidb;

message Base {
  uint32 command = 1;
  uint32 subCommand = 2;
  uint32 errorCode = 3;
  bytes body = 4;
  string errorMsg = 5;
  uint32 isReserved = 12;
}

// OidbSvcTrpcTcp.0xed3_1
message SendPoke {
  uint32 toUin = 1;
  uint32 groupCode = 2;
  uint32 friendUin = 5;
}

message SetSpecialTitleBody {
  string targetUid = 1;
  string specialTitle = 5;
  int32 expireTime = 6;
  string uidName = 7;
}

// OidbSvcTrpcTcp.0x8fc_2
message SetSpecialTitle {
  uint32 groupCode = 1;
  SetSpecialTitleBody body = 3;
}

message GetRKeyResponseItem {
  string rkey = 1;
  uint32 ttlSec = 2;
  uint32 storeId = 3;
  uint32 createTime = 4;
  uint32 type = 5;
}

message GetRKeyResponseItems {
  repeated GetRKeyResponseItem rkeyItems = 1;
}

message GetRKeyResponseBody {
  GetRKeyResponseItems result = 4;
}

// OidbSvcTrpcTcp.0xfe1_2
message FetchUserInfo {
  uint32 uin = 1;
  uint32 field2 = 2;
  repeated FetchUserInfoKey keys = 3;
}

message FetchUserInfoKey {
  uint32 key = 1;
}

message FetchUserInfoResponse {
  FetchUserInfoResponseBody body = 1;
}

message FetchUserInfoResponseBody {
  FetchUserInfoResponseProperty properties = 2;
  uint32 uin = 3;
}

message FetchUserInfoResponseProperty {
  repeated OidbUserNumberProperty numberProperties = 1;
  repeated OidbUserByteProperty bytesProperties = 2;
}

message OidbUserNumberProperty {
  uint32 key = 1;
  uint32 value = 2;
}

message OidbUserByteProperty {
  uint32 key = 1;
  bytes value = 2;
}

// OidbSvcTrpcTcp.0x929d_0
message FetchAiCharacterList {
  uint32 groupId = 1;
  uint32 chatType = 2;
}

message FetchAiCharacterListResponse {
  repeated FetchAiCharacterListResponseKey property = 1;
}

message FetchAiCharacterListResponseKey {
  string type = 1;
  repeated FetchAiCharacterListResponseProperty characters = 2;
}

message FetchAiCharacterListResponseProperty {
  string characterId = 1;
  string characterName = 2;
  string previewUrl = 3;
}

// OidbSvcTrpcTcp.0x929b_0
message GetGroupGenerateAiRecord {
  uint32 groupId = 1;
  string voiceId = 2;
  string text = 3;
  uint32 chatType = 4;
  GetGroupGenerateAiRecordClientMsgInfo clientMsgInfo = 5;
}

message GetGroupGenerateAiRecordClientMsgInfo {
  uint32 msgRandom = 1;
}

// OidbSvcTrpcTcp.0x6d6_2
message GroupFile {
  GroupFileDownload download = 3;
}

message GroupFileDownload {
  uint32 groupCode = 1;
  uint32 appId = 2;
  uint32 busId = 3;
  string fileId = 4;
}

message GroupFileResponse {
  GroupFileDownloadResponse download = 3;
}

message GroupFileDownloadResponse {
  string downloadDns = 5;
  bytes downloadUrl = 6;
}

// OidbSvcTrpcTcp.0xe37_1200
message PrivateFile {
  uint32 subCommand = 1;
  uint32 field2 = 2;
  PrivateFileBody body = 14;
  uint32 field101 = 101;
  uint32 field102 = 102;
  uint32 field200 = 200;
  bytes field99999 = 99999;
}

message PrivateFileBody {
  string receiverUid = 10;
  string fileUuid = 20;
  uint32 type = 30;
  string fileHash = 60;
  uint32 t2 = 601;
}

message PrivateFileResponse {
  uint32 command = 1;
  uint32 subCommand = 2;
  PrivateFileResponseBody body = 14;
  uint32 field50 = 50;
}

message PrivateFileResponseBody {
  uint32 field10 = 10;
  string state = 20;
  PrivateFileResponseResult result = 30;
  PrivateFileResponseMetadata metadata = 40;
}

message PrivateFileResponseResult {
  PrivateFileResponseExtra extra = 120;
}

message PrivateFileResponseMetadata {
  string fileName = 7;
}

message PrivateFileResponseExtra {
  uint32 field100 = 100;
  PrivateFileResponseDownload download = 102;
}

message PrivateFileResponseDownload {
  bytes downloadUrl = 8;
  string downloadDns = 11;
}

// OidbSvcTrpcTcp.0xeb7_1
message GroupClockIn {
  GroupClockInBody body = 2;
}

message GroupClockInBody {
  string uin = 1;
  string groupCode = 2;
  string appVersion = 3;
}
